consolidate jvm options