@@ -109,7 +109,6 @@ apply(from: profile)
 
 apply(plugin: 'idea')
 
-
 // Force checkstyle and rat to run before test tasks for faster feedback
 def codeCheckTasks = task("codeCheckTasks")
 
@@ -190,6 +189,8 @@ subprojects {
   apply(plugin: 'java-library')
   apply(plugin: 'checkstyle')
 
+  apply from: "${project.rootDir}/gradle/common/javaOptions.gradle"
+
   sourceCompatibility = "${project.rootProject.ext.jdkLabel}"
   targetCompatibility = "${project.rootProject.ext.jdkLabel}"
 
@@ -259,28 +260,14 @@ subprojects {
 
     def heapDumpPath = "${project.rootProject.rootDir}/build/${project.name}/heapDumps"
     Files.createDirectories(Paths.get(heapDumpPath))
-    if (JavaVersion.current().isJava11Compatible()) {
-      def JDK11_OPTIONS = ['-Djdk.attach.allowAttachSelf=true',
-                           '--add-exports', 'java.base/jdk.internal.misc=ALL-UNNAMED',
-                           '--add-exports', 'java.base/jdk.internal.ref=ALL-UNNAMED',
-                           '--add-exports', 'java.base/sun.nio.ch=ALL-UNNAMED',
-                           '--add-exports', 'java.management.rmi/com.sun.jmx.remote.internal.rmi=ALL-UNNAMED',
-                           '--add-exports', 'java.rmi/sun.rmi.registry=ALL-UNNAMED',
-                           '--add-exports', 'java.rmi/sun.rmi.server=ALL-UNNAMED',
-                           '--add-exports', 'java.sql/java.sql=ALL-UNNAMED',
-                           '--add-opens', 'java.base/java.lang.module=ALL-UNNAMED',
-                           '--add-opens', 'java.base/jdk.internal.loader=ALL-UNNAMED',
-                           '--add-opens', 'java.base/jdk.internal.ref=ALL-UNNAMED',
-                           '--add-opens', 'java.base/jdk.internal.reflect=ALL-UNNAMED',
-                           '--add-opens', 'java.base/jdk.internal.math=ALL-UNNAMED',
-                           '--add-opens', 'java.base/jdk.internal.module=ALL-UNNAMED',
-                           '--add-opens', 'java.base/jdk.internal.util.jar=ALL-UNNAMED',
-                           '--add-opens', 'jdk.management/com.sun.management.internal=ALL-UNNAMED',
-                           '-XX:+HeapDumpOnOutOfMemoryError',
-                           "-XX:HeapDumpPath=${heapDumpPath}"]
-      jvmArgs(JDK11_OPTIONS)
-      println("JVM arguments for $project.name are $allJvmArgs")
-    }
+    def jdkOptions = project.ext.JDK_OPTIONS
+
+    jdkOptions += [
+            '-XX:+HeapDumpOnOutOfMemoryError',
+            "-XX:HeapDumpPath=${heapDumpPath}",
+    ]
+    jvmArgs(jdkOptions)
+    println("JVM arguments for $project.name are $allJvmArgs")
   }
 
   codeCheckTasks.dependsOn(tasks.withType(Checkstyle))
