@@ -25,10 +25,11 @@ plugins {
     id('maven-publish')
 }
 
-if (propertyWithDefault("artifactType", null) == "spark")
-{
+if (propertyWithDefault("artifactType", null) == "spark") {
     apply from: "$rootDir/gradle/common/publishing.gradle"
 }
+
+apply from: "${project.rootDir}/gradle/common/javaOptions.gradle"
 
 java {
     withJavadocJar()
@@ -159,31 +160,7 @@ jar {
 // (CI) or falls back to all supported versions (local dev).
 def configureCoreTestTask(Test task, String majorMinor = null) {
     task.doFirst {
-        def JDK_OPTIONS = ['-Djdk.attach.allowAttachSelf=true',
-                            '--add-exports', 'java.base/jdk.internal.misc=ALL-UNNAMED',
-                            '--add-exports', 'java.base/jdk.internal.ref=ALL-UNNAMED',
-                            '--add-exports', 'java.base/sun.nio.ch=ALL-UNNAMED',
-                            '--add-exports', 'java.management.rmi/com.sun.jmx.remote.internal.rmi=ALL-UNNAMED',
-                            '--add-exports', 'java.rmi/sun.rmi.registry=ALL-UNNAMED',
-                            '--add-exports', 'java.rmi/sun.rmi.server=ALL-UNNAMED',
-                            '--add-exports', 'java.sql/java.sql=ALL-UNNAMED',
-                            '--add-opens', 'java.base/java.lang.module=ALL-UNNAMED',
-                            '--add-opens', 'java.base/jdk.internal.loader=ALL-UNNAMED',
-                            '--add-opens', 'java.base/jdk.internal.ref=ALL-UNNAMED',
-                            '--add-opens', 'java.base/jdk.internal.reflect=ALL-UNNAMED',
-                            '--add-opens', 'java.base/jdk.internal.math=ALL-UNNAMED',
-                            '--add-opens', 'java.base/jdk.internal.module=ALL-UNNAMED',
-                            '--add-opens', 'java.base/jdk.internal.util.jar=ALL-UNNAMED',
-                            '--add-opens', 'jdk.management/com.sun.management.internal=ALL-UNNAMED']
-
-        if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_17)) {
-            JDK_OPTIONS += ['--add-opens', 'java.base/java.io=ALL-UNNAMED',
-                            '--add-opens', 'java.base/java.math=ALL-UNNAMED',
-                            '--add-opens', 'java.base/java.nio=ALL-UNNAMED',
-                            '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED',
-                            '--add-opens', 'java.base/sun.util.calendar=ALL-UNNAMED']
-        }
-        task.jvmArgs(JDK_OPTIONS)
+        task.jvmArgs(project.ext.JDK_OPTIONS)
         println("JVM arguments for $project.name are $allJvmArgs")
     }
 
@@ -229,10 +206,7 @@ test {
                        ?: Math.max(Runtime.runtime.availableProcessors() * 2, 8)
 
     if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_17)) {
-        jvmArgs(['--add-opens', 'java.base/java.io=ALL-UNNAMED',
-                 '--add-opens', 'java.base/java.math=ALL-UNNAMED',
-                 '--add-opens', 'java.base/java.nio=ALL-UNNAMED',
-                 '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED'])
+        jvmArgs(project.ext.JDK17_OPTIONS)
     }
 
     useJUnitPlatform {
