@@ -27,10 +27,11 @@ plugins {
     id('maven-publish')
 }
 
-if (propertyWithDefault("artifactType", null) == "spark")
-{
+if (propertyWithDefault("artifactType", null) == "spark") {
     apply from: "$rootDir/gradle/common/publishing.gradle"
 }
+
+apply from: "${project.rootDir}/gradle/common/javaOptions.gradle"
 
 def integrationMaxHeapSize = System.getenv("INTEGRATION_MAX_HEAP_SIZE") ?: "3072M"
 println("Using ${integrationMaxHeapSize} maxHeapSize")
@@ -125,41 +126,7 @@ def configureIntegrationTestTask = { Test task, String majorMinor = null ->
         showStandardStreams = false
     }
 
-    def JDK_OPTIONS = ['-Djdk.attach.allowAttachSelf=true',
-                       '--add-exports', 'java.base/jdk.internal.misc=ALL-UNNAMED',
-                       '--add-exports', 'java.base/jdk.internal.ref=ALL-UNNAMED',
-                       '--add-exports', 'java.base/sun.nio.ch=ALL-UNNAMED',
-                       '--add-exports', 'java.management.rmi/com.sun.jmx.remote.internal.rmi=ALL-UNNAMED',
-                       '--add-exports', 'java.rmi/sun.rmi.registry=ALL-UNNAMED',
-                       '--add-exports', 'java.rmi/sun.rmi.server=ALL-UNNAMED',
-                       '--add-exports', 'java.sql/java.sql=ALL-UNNAMED',
-                       '--add-opens', 'java.base/java.lang.module=ALL-UNNAMED',
-                       '--add-opens', 'java.base/jdk.internal.loader=ALL-UNNAMED',
-                       '--add-opens', 'java.base/jdk.internal.ref=ALL-UNNAMED',
-                       '--add-opens', 'java.base/jdk.internal.reflect=ALL-UNNAMED',
-                       '--add-opens', 'java.base/jdk.internal.math=ALL-UNNAMED',
-                       '--add-opens', 'java.base/jdk.internal.module=ALL-UNNAMED',
-                       '--add-opens', 'java.base/jdk.internal.util.jar=ALL-UNNAMED',
-                       '--add-opens', 'jdk.management/com.sun.management.internal=ALL-UNNAMED']
-
-    if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_17)) {
-        JDK_OPTIONS += ['--add-exports', 'java.rmi/sun.rmi.transport=ALL-UNNAMED',
-                        '--add-exports', 'java.rmi/sun.rmi.transport.tcp=ALL-UNNAMED',
-                        '--add-opens', 'java.base/java.io=ALL-UNNAMED',
-                        '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
-                        '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
-                        '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED',
-                        '--add-opens', 'java.base/java.math=ALL-UNNAMED',
-                        '--add-opens', 'java.base/java.nio=ALL-UNNAMED',
-                        '--add-opens', 'java.base/java.util=ALL-UNNAMED',
-                        '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED',
-                        '--add-opens', 'java.base/java.util.concurrent.atomic=ALL-UNNAMED',
-                        '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED',
-                        '--add-opens', 'java.base/sun.util.calendar=ALL-UNNAMED',
-                        '--add-opens', 'java.rmi/sun.rmi.transport.tcp=ALL-UNNAMED',
-        ]
-    }
-    task.jvmArgs(JDK_OPTIONS)
+    task.jvmArgs(project.ext.JDK_OPTIONS)
     println("JVM arguments for $project.name are ${task.allJvmArgs}")
 
     // Some test classes are skipped entirely via assumeThat (e.g. MultipleTokens tests on C* 4.0).
